[tool.poetry]
name = "python-bitpin"
version = "0.0.11"
description = "Bitpin Exchange Python SDK"
authors = ["AMiWR <amiwrpremium@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "bitpin", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
pysocks = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
pylint = "^2.17.5"
dead = "^1.5.2"
pytype = "^2023.8.22"
pydocstyle = "^6.3.0"
vulture = "^2.9.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"
mkdocstrings = "^0.22.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-committers-plugin-2 = "^1.1.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocstrings-python = "^1.6.0"
markdown-exec = {extras = ["ansi"], version = "^1.6.0"}
genbadge = {extras = ["flake8"], version = "^1.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "google"
add-ignore = "D212, D202"

[tool.vulture]
min_confidence = 100
paths = ["src/"]
sort_by_size = true
verbose = true
